--- a/frontend/myridehub/src/Rent/RentNow.css
+++ b/frontend/myridehub/src/Rent/RentNow.css
@@ -59,13 +59,15 @@
 
 /* Form Container */
 .form-container {
-  background-color: #eeeeee;
+  background-color: #f5f5f5;
   padding: 2rem;
   border-radius: 12px;
   width: 100%;
   max-width: 500px;
-  box-shadow: 0 4px 12px rgba(8, 8, 8, 0.752);
-  text-align: left;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Driver Selection */
