--- a/frontend/myridehub/src/Rent/ConfirmationPage.css
+++ b/frontend/myridehub/src/Rent/ConfirmationPage.css
@@ -8,7 +8,7 @@ body {
   max-width: 1100px;
   margin: 80px auto;
   padding: 40px;
-  background-color: #ffffff;
+  background-color: #9f9f9f;
   border-radius: 16px;
   box-shadow: 0 6px 24px rgba(0, 0, 0, 0.1);
   color: #333333;
