--- a/frontend/myridehub/src/Rent/ReservationPage.css
+++ b/frontend/myridehub/src/Rent/ReservationPage.css
@@ -11,7 +11,7 @@ body, html {
   min-height: 100vh;
   padding: 2rem 5%;
   box-sizing: border-box;
-  background-color: #ffffff;
+  background-color: #9f9f9f;
 }
 
 /* Back button */
