--- a/frontend/myridehub/src/Rent/ReservationPage.css
+++ b/frontend/myridehub/src/Rent/ReservationPage.css
@@ -100,7 +100,7 @@ body, html {
 
 /* Summary Box */
 .summary-box {
-  background-color: #a3a3a3;
+  background-color: #ffffff;
   padding: 1rem;
   border-radius: 10px;
   border: 1px solid #e0e0e0;
